<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/tvItems"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Items: Burger, Fries"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tvTotal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Total: 50 ₪"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@id/tvItems"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="12dp"/>

        <RadioGroup
            android:id="@+id/rgPayment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tvTotal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="12dp">

            <RadioButton
                android:id="@+id/rbCard"
                style="@style/Widget.RestaurantApp.RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_credit_card"
                android:checked="true"/>

            <RadioButton
                android:id="@+id/rbOther"
                style="@style/Widget.RestaurantApp.RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Other"/>
        </RadioGroup>

        <EditText
            android:id="@+id/etFirstName"
            android:hint="@string/txt_first_name"
            android:background="@drawable/edittext_background"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/rgPayment"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="12dp"/>

        <EditText
            android:id="@+id/etLastName"
            android:hint="@string/txt_last_name"
            android:background="@drawable/edittext_background"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/etFirstName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp"/>

        <EditText
            android:id="@+id/etCardNumber"
            android:hint="@string/txt_card_number"
            android:background="@drawable/edittext_background"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/etLastName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp"/>

        <Button
            android:id="@+id/btnPay"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/Widget.RestaurantApp.OnboardingButton"
            android:text="@string/btn_pay"
            app:layout_constraintTop_toBottomOf="@id/etCardNumber"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="16dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
