<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <ImageView
            android:id="@+id/image"
            android:layout_width="0dp"
            android:layout_height="250dp"
            android:scaleType="centerCrop"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/txt_main_title"
            android:textSize="22sp"
            android:layout_marginTop="8dp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/desc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/txt_description"
            android:layout_marginTop="8dp"
            android:textSize="19sp"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="$0.00"
            android:textSize="20sp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/desc"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ImageButton
            android:id="@+id/btnMinus"
            android:layout_width="31dp"
            android:layout_height="31dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/minus"
            app:tint="@color/truck_red"
            app:layout_constraintEnd_toStartOf="@id/tvQty"
            app:layout_constraintTop_toBottomOf="@id/price"
            app:layout_constraintStart_toStartOf="parent"
            />

        <TextView
            android:id="@+id/tvQty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1"
            android:textSize="20sp"
            app:layout_constraintTop_toTopOf="@id/btnMinus"
            app:layout_constraintBottom_toBottomOf="@id/btnMinus"
            app:layout_constraintStart_toEndOf="@id/btnMinus"
            app:layout_constraintEnd_toStartOf="@id/btnPlus"/>

        <ImageButton
            android:id="@+id/btnPlus"
            android:layout_width="33dp"
            android:layout_height="33dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/add"
            app:tint="@color/truck_red"
            app:layout_constraintTop_toTopOf="@id/btnMinus"
            app:layout_constraintBottom_toBottomOf="@id/btnMinus"
            app:layout_constraintStart_toEndOf="@id/tvQty"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Button
            android:id="@+id/btnAddCart"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:text="@string/btn_add_to_cart"
            android:layout_marginTop="16dp"
            style="@style/Widget.RestaurantApp.OnboardingButton"
            app:layout_constraintTop_toBottomOf="@id/btnMinus"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
